ya hace algo con gsap :v

--- a/public/styles/producto.scss
+++ b/public/styles/producto.scss
@@ -172,7 +172,7 @@ body{
     $tam-font-responsive: 13px;
 
     body{
-        font-size: $tam-font-responsivet;
+        font-size: $tam-font-responsive;
     }
 
     .carrito{
