--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -3,31 +3,73 @@
   display: -ms-flexbox;
   display: flex;
   height: 68px;
-  -ms-flex-preferred-size: 68px;
-      flex-basis: 68px;
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   font-size: 17px;
   font-weight: bold;
   position: absolute;
-  z-index: 10;
+  z-index: 16;
 }
 
 .menu__logo {
   width: 30%;
-  height: 60%;
+  height: 70%;
   margin: 0;
   padding: .7em;
   margin-left: 2em;
 }
 
-.menu-categoria {
+.menu__nav {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  z-index: 14;
+  top: -100%;
+  background: white;
+}
+
+.menu__categoria {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  font-size: 30px;
+  font-weight: bold;
+  top: 40%;
+  z-index: 15;
+  list-style: none;
+  right: 0;
+}
+
+.menu__categoria__texto {
+  font-size: 15px;
+}
+
+.item {
+  text-decoration: none;
+  padding: 1.5em;
+  opacity: 0;
+}
+
+.item a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.dropbtn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -41,15 +83,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: absolute;
-  top: 0%;
-}
-
-.menu-categoria__texto {
-  font-size: 15px;
-}
-
-.dropbtn {
   color: white;
   padding: 16px;
   font-size: 16px;
