--- a/public/styles/navbar.scss
+++ b/public/styles/navbar.scss
@@ -9,35 +9,44 @@ $color-letras_arts: #dfc8ba;
 .menu{
     display: flex;
     height: 68px;
-    flex-basis: 68px;
-    flex-grow: 0;
-    flex-shrink: 0;
     align-items: center;
     font-size: 17px;
     font-weight: bold;
     position: absolute;
-    // background: rgba(255, 255, 255, 0.8);
-    z-index: 10;
+    z-index: 16;
     
     &__logo{
         width: 30%;
-        height: 60%;
+        height: 70%;
         margin: 0;
         padding: .7em;
         margin-left: 2em;      
     }
     
-    &-categoria {
-        display: flex;
-        flex-direction: column;
+    &__nav{
+     width: 100%;
+     height: 100%;
+     display: flex;
+     justify-content: center;
+     position: absolute;
+     z-index: 14;
+     top: -100%;
+     background: white;
+    }
+
+    &__categoria {
+        display: flex; 
         justify-content: center;
         align-items: center;
         position: absolute;
-        top: 0%;
-        
-        &__icono {
-            
-        }
+        font-size: 30px;
+        font-weight: bold;
+        top: 40%;
+        z-index: 15;
+        list-style: none;
+        // right: 13%;
+        right: 0;
+
         
         &__texto {
             font-size: 15px;
@@ -45,7 +54,28 @@ $color-letras_arts: #dfc8ba;
     }   
 }
 
+.item{
+    text-decoration: none;
+    padding: 1.5em;
+    opacity: 0;
+    //background: #ff8e8e;
+
+    & a{
+        color: inherit;
+        text-decoration: none;
+    }
+
+    &__arte{
+        
+    }
+    
+}
+
 .dropbtn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     color: white;
     padding: 16px;
     font-size: 16px;
