--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -185,6 +185,8 @@
         </aside>
         <div class="clearfix"></div>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script type="text/javascript" src="./scripts/main.js"></script>
 </body>
 
