--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,22 +1,24 @@
 <header class="ppal">
-    <section class="menu">
+    <div class="menu">
         <img src="/img/logo.png" class="menu__logo">
-        <nav class="menu__nav" id="nav" onclick="desplegar()">
-            <div class="menu-categoria">
 
-                <button class="dropbtn"> <i class="fas fa-ellipsis-h menu-categoria__icono"></i>
-                    <a class="menu-categoria__texto">Categoría</a>
-                </button>
-                <div id="myDropdown" class="dropdown-content">
-                    <a href="/tienda/diseño">Diseño</a>
-                    <a href="/tienda/arte">Arte</a>
-                    <a href="/tienda/papeleria">Papelería</a>
-                    <a href="/tienda/escritura">Escritura</a>
-                    <a href="/tienda/arquitectura">Arquitectura</a>
-                    <a href="/tienda">Sin categoria</a>
-                </div>
-            </div>
+        <button class="dropbtn">
+            <i class="fas fa-ellipsis-h menu-categoria__icono"></i>
+            <a class="menu-categoria__texto">Categoría</a>
+        </button>
+    </div>
 
-        </nav>
-    </section>
+    <nav class="menu__nav">
+
+        <menu class="menu__categoria">
+
+            <li class="item item__diseno"><a href="/tienda/diseño"> Diseño </a></li>
+            <li class="item item__arte"><a href="/tienda/arte"> Arte </a></li>
+            <li class="item item__papeleria"><a href="/tienda/papeleria"> Papelería </a></li>
+            <li class="item item__escritura"><a href="/tienda/escritura"> Escritura </a></li>
+            <li class="item item__arquitectura"><a href="/tienda/arquitectura"> Arquitectura </a></li>
+
+        </menu>
+
+    </nav>
 </header>
