--- a/views/producto.handlebars
+++ b/views/producto.handlebars
@@ -61,8 +61,9 @@
 
     </section>
 
-    {{> footer}}
+    {{!-- {{> footer}} --}}
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="/scripts/producto.js"></script>
 
 </body>
