--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -21,7 +21,7 @@
 }
 
 .menu__nav {
-  width: 100%;
+  position: fixed;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -29,10 +29,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  position: absolute;
   z-index: 14;
-  top: -100%;
   background: white;
+  right: 0;
 }
 
 .menu__categoria {
@@ -67,6 +66,10 @@
 .item a {
   color: inherit;
   text-decoration: none;
+}
+
+.item:hover {
+  text-decoration: underline;
 }
 
 .dropbtn {
