--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -8,7 +8,7 @@
           align-items: center;
   font-size: 17px;
   font-weight: bold;
-  position: absolute;
+  position: fixed;
   z-index: 16;
 }
 
@@ -69,7 +69,36 @@
 }
 
 .item:hover {
+  color: #ff8e8e;
   text-decoration: underline;
+}
+
+.btn {
+  display: none;
+  position: absolute;
+  top: 65%;
+  width: 12%;
+  height: 2%;
+  border-radius: 12em;
+  text-align: center;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 0.5em 1em 1.5em 1em;
+  background-color: white;
+  color: #ff8e8e;
+  border: 0.1em solid #ff8e8e;
+}
+
+.btn:hover {
+  background-color: #ff8e8e;
+  color: white;
+}
+
+.btn a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .dropbtn {
@@ -95,45 +124,8 @@
   margin-left: 1%;
 }
 
-.dropbtn:hover, .dropbtn:focus {
-  background: #dfc8ba;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: white;
-  top: 70px;
-  left: 2px;
-  min-width: 160px;
-  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: #dfc8ba;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  color: white;
-  background: #dfc8ba;
-}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {
-  display: block;
+.dropbtn:hover {
+  background: #b49e91;
 }
 
 @media (max-width: 360px) {
