--- a/public/styles/navbar.scss
+++ b/public/styles/navbar.scss
@@ -12,7 +12,7 @@ $color-letras_arts: #dfc8ba;
     align-items: center;
     font-size: 17px;
     font-weight: bold;
-    position: absolute;
+    position: fixed;
     z-index: 16;
     
     &__logo{
@@ -65,9 +65,40 @@ $color-letras_arts: #dfc8ba;
     }
     
     &:hover{
+        color: $color-rose;
         text-decoration: underline;
     }
 }
+
+
+.btn{
+    display: none;
+    position: absolute;
+    top: 65%;
+    width: 12%;
+    height: 2%;
+    border-radius: 12em;
+    text-align: center;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 0.5em 1em 1.5em 1em;
+    background-color: white; 
+    color: $color-rose; 
+    border: 0.1em solid $color-rose;
+    
+    &:hover{
+        background-color: $color-rose;
+        color: white;
+    }
+    
+    & a{
+        color: inherit;
+        text-decoration: none; 
+    }
+}
+
 
 .dropbtn {
     display: flex;
@@ -81,50 +112,12 @@ $color-letras_arts: #dfc8ba;
     cursor: pointer;
     background: #dfc8ba;
     margin-left: 1%;
-}
-
-//Dropdown del boton en hover & focus
-.dropbtn:hover, .dropbtn:focus {
-    background: $color-letras_arts;
-}
-
-//El container <div> - needed to position the dropdown content
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-    top: 70px;
-    left: 2px;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: $color-letras_arts;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-    color: white;
-    background: $color-letras_arts;
     
+    &:hover{
+        background: #b49e91;
+    }
 }
 
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {
-    display:block;
-}
 
 @media (max-width: 360px){
     .body{
