--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -1,4 +1,5 @@
 .menu {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10,11 +11,12 @@
   font-weight: bold;
   position: fixed;
   z-index: 16;
+  background: rgba(255, 255, 255, 0.9);
 }
 
 .menu__logo {
-  width: 30%;
-  height: 70%;
+  width: 10%;
+  height: 50%;
   margin: 0;
   padding: .7em;
   margin-left: 2em;
