--- a/public/styles/navbar.scss
+++ b/public/styles/navbar.scss
@@ -7,6 +7,7 @@ $color-rose: #ff8e8e;
 $color-letras_arts: #dfc8ba;
 
 .menu{
+    width: 100%;
     display: flex;
     height: 68px;
     align-items: center;
@@ -14,10 +15,11 @@ $color-letras_arts: #dfc8ba;
     font-weight: bold;
     position: fixed;
     z-index: 16;
+    background: rgba($color: white, $alpha: 0.9);
     
     &__logo{
-        width: 30%;
-        height: 70%;
+        width: 10%;
+        height: 50%;
         margin: 0;
         padding: .7em;
         margin-left: 2em;      
