--- a/views/carrito.handlebars
+++ b/views/carrito.handlebars
@@ -100,13 +100,23 @@
             <div class="modal-contenido__info">
             </div>
         </div>
-
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-    <script src="/scripts/carrito.js"></script>
+    <div id="myModal2" class="modal2">
+        <!-- Modal content -->
+        <div class="modal-contenido2">
+            <span class="cerrar2">X</span>
+            <div class="modal-contenido__info2">
+                
+            </div>
+        </div>
+    </div>
+    
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <script src="/scripts/carrito.js"></script>
 </body>
 
 
