--- a/views/carrito.handlebars
+++ b/views/carrito.handlebars
@@ -102,12 +102,12 @@
         </div>
     </div>
 
-    <div id="myModal2" class="modal2">
+     <div id="myModal2" class="modal2">
         <!-- Modal content -->
         <div class="modal-contenido2">
             <span class="cerrar2">X</span>
-            <div class="modal-contenido__info2">
-                
+            <div class="modal-contenido__info2" style="background-image: url(https://www.cruzblanca.cl/cruzblanca/site/artic/20161206/imag/foto_0000001720161206143530.png)">
+                <h3>¡LO ATRAPASTE!</h3>
             </div>
         </div>
     </div>
