--- a/public/styles/navbar.scss
+++ b/public/styles/navbar.scss
@@ -22,7 +22,9 @@ $color-letras_arts: #dfc8ba;
         height: 50%;
         margin: 0;
         padding: .7em;
-        margin-left: 2em;      
+        // margin-left: 2em; 
+        top: 10%;  
+        left: 10%;   
     }
     
     &__nav{
