--- a/public/styles/carrito.scss
+++ b/public/styles/carrito.scss
@@ -15,6 +15,7 @@ body{
     margin: 0;
     font-family: 'Comfortaa', cursive;
     font-size: $tam-font;
+    overflow-x: hidden;
 }
 
 .encabezado{
@@ -414,11 +415,11 @@ label{
 }
 
 .modal-contenido__info2{
- width: 100%;
- height: 100%;
- background-position: center;
- background-size: contain;
- background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .cerrar2 {
@@ -442,6 +443,11 @@ label{
     z-index:2;
     top: 15%;
     left: -8%;
+}
+
+#juego{
+    width: 200px;
+    overflow-x: hidden;
 }
 
 
