--- a/views/carrito.handlebars
+++ b/views/carrito.handlebars
@@ -32,8 +32,8 @@
 
             <h3 class="carrito__titulo">Productos</h3>
             <div class="lista__carrito">
-
             </div>
+
             <!--concatenar esto al inner html del js
             <div class="producto__contenedor">
                 <img class="producto__img" src="IMAGEN" alt="">
@@ -86,35 +86,42 @@
                 </div>
 
                 <button class="pago-sin__btn pago-sin__btn1" onclick="registrar()">Confirmar y realizar pago</button>
-
+                <button class="pago-sin__btn pago-sin__btn1 btn__jugar"><a href="/juego">Juega por un descuento</a></button>
             </div>
         </div>
 
     </section>
+
+    
 
     <div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-contenido">
             <span class="cerrar">X</span>
             <div class="modal-contenido__info">
+                <div id="juego"></div>
+    <!--ESTE ES EL DIV DEL COO ESE-->
             </div>
         </div>
     </div>
 
-     <div id="myModal2" class="modal2">
+    <div id="myModal2" class="modal2">
         <div class="modal-contenido2">
             <span class="cerrar2">X</span>
-            <div class="modal-contenido__info2" style="background-image: url(https://www.cruzblanca.cl/cruzblanca/site/artic/20161206/imag/foto_0000001720161206143530.png)">
+            <div class="modal-contenido__info2"
+                style="background-image: url(https://www.cruzblanca.cl/cruzblanca/site/artic/20161206/imag/foto_0000001720161206143530.png)">
                 <h3>¡LO ATRAPASTE!</h3>
             </div>
         </div>
     </div>
-    
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="/scripts/carrito.js"></script>
+
+   
 </body>
 
 
