--- a/views/juego.handlebars
+++ b/views/juego.handlebars
@@ -2,17 +2,42 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!--fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet">
+
+    <link rel="stylesheet" href="/styles/juego.css">
+
     <title>Juego</title>
 </head>
 
 <body>
+    <h1 class="titulo">¡Clickea hasta que explote!</h1>
     <div id="juego"></div>
+
+    <div id="myModal2" class="modal2">
+        <div class="modal-contenido2">
+            <span class="cerrar2">X</span>
+            <div class="modal-contenido__info2"
+                style="background-image: url(https://www.cruzblanca.cl/cruzblanca/site/artic/20161206/imag/foto_0000001720161206143530.png)">
+                <h3>¡LO ATRAPASTE!</h3>
+            </div>
+        </div>
+    </div>
 
      <!--scripts del coso ese-->
     <script src="/scripts/lib/p5.js"></script>
     <script src="/scripts/Splash.js"></script>
     <script src="/scripts/logica.js"></script>
     <script src="/scripts/maxi.js"></script>
+
+     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 </body> 
 
 </html>
