creo que funciona

--- a/views/juego.handlebars
+++ b/views/juego.handlebars
@@ -21,7 +21,7 @@
 
     <div id="myModal2" class="modal2">
         <div class="modal-contenido2">
-            <span class="cerrar2">X</span>
+            <span class="cerrar2"><a href="/carrito">X</a></span>
             <div class="modal-contenido__info2"
                 style="background-image: url(https://www.cruzblanca.cl/cruzblanca/site/artic/20161206/imag/foto_0000001720161206143530.png)">
                 <h3>¡LO ATRAPASTE!</h3>
