--- a/public/styles/juego.scss
+++ b/public/styles/juego.scss
@@ -12,8 +12,10 @@ $tam-font: 16px;
 $tam-peque: 13px;
 
 body{
-margin: 0;
-background: $color-light-orange;
+    margin: 0;
+    font-family: 'Comfortaa', cursive;
+    font-size: $tam-font;
+    background: $color-light-orange;
 }
 
 .titulo{
@@ -21,7 +23,6 @@ background: $color-light-orange;
     font-size: $tam-titulo;
     text-align: center;
 }
-
 
 .modal2 {
     display: none;
@@ -34,6 +35,7 @@ background: $color-light-orange;
     overflow-y:hidden;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
+    opacity: 0;
 }
 
 .modal-contenido2 {
@@ -45,7 +47,8 @@ background: $color-light-orange;
     height: 60%;
     top: -10%;
     right: 30%;
-    position: fixed;    
+    position: fixed; 
+    border-radius: 1em;   
 }
 
 .modal-contenido__info2{
