--- a/public/styles/juego.scss
+++ b/public/styles/juego.scss
@@ -24,6 +24,11 @@ body{
     text-align: center;
 }
 
+.desc{
+    font-size: $tam-titulo-m;
+    text-align: center;
+}
+
 .modal2 {
     display: none;
     position: fixed;
@@ -69,6 +74,11 @@ body{
         color: black;
         text-decoration: none;
         cursor: pointer;
+    }
+
+    & a{
+        color: inherit;
+        text-decoration: none;
     }
 }
 
