--- a/views/juego.handlebars
+++ b/views/juego.handlebars
@@ -17,6 +17,7 @@
 
 <body>
     <h1 class="titulo">¡Clickea hasta que explote!</h1>
+    <p class="desc">Espera a que se mueva e intenta atraparlo</p>
     <div id="juego"></div>
 
     <div id="myModal2" class="modal2">
