--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -116,7 +116,7 @@
                 <li class="filtro__item filtro__first"><a href="/tienda?tipo=promo">PROMOCIONES</a></li>
                 <li class="filtro__item"><a href="/tienda?tipo=nuevo">NUEVO</a></li>
                 <li class="filtro__item"><a href="/tienda?tipo=destacado">DESTACADO</a></li>
-                <li class="filtro__item"><a href="/tienda">VER TODO SIN CATEGORIA</a></li>
+                <li class="filtro__item"><a href="/tienda">VER TODO</a></li>
                 {{/if}}
 
             </ul>
