--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -46,6 +46,13 @@ body{
         float: left;
         color: $color-blue;
         padding: 0 3em 0 3em;
+
+        
+    }
+
+    &__item-tienda a {
+            color: inherit;
+            text-decoration: none;
     }
     
     &__item .icon{
